--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,16 @@
 language: python
+
 python:
   - 2.6
   - 2.7
+  - 3.4
+
+install:
+  - pip install -U -r requirements/base.txt
+  - pip install -U -r requirements/test.txt
+
+script:
+  - python -m pytest
+
+notifications:
+  email: false
