--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ python:
   - 3.4
   - 3.5
 
+cache: pip
+
 install:
   - pip install -U -r requirements/base.txt
   - pip install -U -r requirements/test.txt
